--- a/PharmacyVSTU/appsettings.json
+++ b/PharmacyVSTU/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+"AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=ziggy.db.elephantsql.com;Port=5432;Username=cwypqppo;Password=Gb8MehvAHelwGMuU6vT9coHfxnOx9ER-;Database=cwypqppo;",
+  }
 }
