--- a/PharmacyVSTU/ClientApp/package.json
+++ b/PharmacyVSTU/ClientApp/package.json
@@ -7,9 +7,6 @@
   "dependencies": {
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
-    "@types/googlemaps": "3.39.6",
-    "@types/markerclustererplus": "2.1.33",
-    "ajv": "6.12.2",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
     "history": "4.10.1",
@@ -18,11 +15,10 @@
     "react": "16.13.1",
     "react-chartist": "0.14.3",
     "react-dom": "16.13.1",
-    "react-google-maps": "9.4.5",
+    "react-google-maps": "^7.3.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.1",
-    "react-swipeable-views": "0.13.9",
-    "typescript": "3.9.3"
+    "react-scripts": "^3.4.4",
+    "react-swipeable-views": "0.13.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,7 +51,7 @@
   "devDependencies": {
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-prettier": "3.1.3",
-    "gulp": "4.0.2",
+    "gulp": "^3.9.1",
     "gulp-append-prepend": "1.0.8",
     "prettier": "2.0.5"
   },
