--- a/PharmacyVSTU/ClientApp/package.json
+++ b/PharmacyVSTU/ClientApp/package.json
@@ -18,7 +18,8 @@
     "react-google-maps": "^7.3.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "^3.4.4",
-    "react-swipeable-views": "0.13.9"
+    "react-swipeable-views": "0.13.9",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
