--- a/PharmacyVSTU/ClientApp/.vscode/launch.json
+++ b/PharmacyVSTU/ClientApp/.vscode/launch.json
@@ -8,6 +8,7 @@
             "name": "Chrome",
             "type": "chrome",
             "request": "launch",
+            "runtimeArgs": ["--disable-web-security"],
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}",
             "sourceMapPathOverrides": {
