--- a/PharmacyVSTU/ClientApp/package.json
+++ b/PharmacyVSTU/ClientApp/package.json
@@ -7,8 +7,10 @@
   "dependencies": {
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
+    "axios": "^0.21.1",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
+    "dotenv": "^8.2.0",
     "history": "4.10.1",
     "perfect-scrollbar": "1.5.0",
     "prop-types": "15.7.2",
