--- a/PharmacyVSTU/PharmacyVSTU.csproj
+++ b/PharmacyVSTU/PharmacyVSTU.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.11" />
         <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="6.0.0-preview.1.21103.6" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.1" />
     </ItemGroup>
 
