auth and reg controllers added

--- a/PharmacyVSTU/appsettings.json
+++ b/PharmacyVSTU/appsettings.json
@@ -8,6 +8,6 @@
     },
 "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=ziggy.db.elephantsql.com;Port=5432;Username=cwypqppo;Password=Gb8MehvAHelwGMuU6vT9coHfxnOx9ER-;Database=cwypqppo;",
+    "DefaultConnection": "Host=127.0.0.1;Port=5432;Username=postgres;Password=admin;Database=auth_test;"
   }
 }
