--- a/PharmacyVSTU/ClientApp/package.json
+++ b/PharmacyVSTU/ClientApp/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "^3.4.4",
     "react-swipeable-views": "0.13.9",
+    "react-transition-group": "^4.4.1",
     "universal-cookie": "^4.0.4"
   },
   "scripts": {
