--- a/PharmacyVSTU/appsettings.json
+++ b/PharmacyVSTU/appsettings.json
@@ -8,7 +8,7 @@
     },
 "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=ziggy.db.elephantsql.com;Port=5432;Username=cwypqppo;Password=Gb8MehvAHelwGMuU6vT9coHfxnOx9ER-;Database=cwypqppo;",
+    "DefaultConnection": "Host=aptekahelper.ddns.net;Port=5432;Username=postgres;Password=postgres;Database=postgres;"
   },
   "Kestrel": {
     "EndPoints": {
